--- a/frontend/quiz/src/app/components/header/header.component.html
+++ b/frontend/quiz/src/app/components/header/header.component.html
@@ -31,6 +31,14 @@
           >Register</a
         >
       </ng-template>
+
+      <a
+        routerLink="leaderboard"
+        class="nav-link"
+        routerLinkActive="active"
+        [routerLinkActiveOptions]="{ exact: true }"
+      >Leaderboard</a
+      >
     </nav>
   </div>
 </header>
