--- a/frontend/quiz/src/app/pages/home/home.component.html
+++ b/frontend/quiz/src/app/pages/home/home.component.html
@@ -26,8 +26,8 @@
       Sort by title
       <select [(ngModel)]="sortBy" (change)="onSortChange()">
         <option value="">Choose option</option>
-        <option value="asc">Asc</option>
-        <option value="desc">Desc</option>
+        <option value="asc">Ascending</option>
+        <option value="desc">Descending</option>
       </select>
     </label>
   </div>
