--- a/frontend/quiz/src/app/pages/quiz/quiz.component.html
+++ b/frontend/quiz/src/app/pages/quiz/quiz.component.html
@@ -24,6 +24,9 @@
       <strong>Time to solve:</strong> {{ quiz.timeToSolve }} minutes.
     </p>
     <p class="text-lg text-neutral-300">
+      <strong>Times solved:</strong> {{ quiz.timesSolved }}
+    </p>
+    <p class="text-lg text-neutral-300">
       <strong>Created By:</strong> {{ quiz.createdBy }}
     </p>
     <p class="text-lg text-neutral-300">
