--- a/frontend/quiz/src/styles.css
+++ b/frontend/quiz/src/styles.css
@@ -44,4 +44,18 @@
   .loading {
     @apply text-xl font-semibold text-neutral-500;
   }
+  .row {
+    @apply grid grid-cols-[40px_1fr_150px]  px-4 py-3 border-b border-solid border-neutral-600 max-w-2xl mx-auto;
+  }
+  .row:nth-child(odd) {
+    @apply bg-neutral-700;
+  }
+  .row p{
+    @apply text-center;
+  }
+  .row p:last-child {
+    @apply text-right;
+  }
+
+
 }
