--- a/frontend/quiz/src/app/pages/profile/profile.component.html
+++ b/frontend/quiz/src/app/pages/profile/profile.component.html
@@ -47,7 +47,30 @@
     </div>
   </ng-container>
 
-  <ng-container *ngIf="!errorMessage && (!user || !stats)">
+  <div
+    class="bg-neutral-800 p-6 rounded-lg shadow-lg border border-neutral-600 mt-6"
+    *ngIf="achievements && achievements.length > 0"
+  >
+    <h2 class="text-xl font-semibold text-neutral-100 mb-4">Achievements</h2>
+    <div class="grid grid-cols-3 place-items-center">
+      <div
+        *ngFor="let achievement of achievements"
+        class="flex flex-col items-center"
+      >
+        <img
+          [title]="achievement.name"
+          [src]="this.IMAGE_URL + achievement.url"
+          class="w-24 h-24 rounded-lg shadow-md border border-gray-200 hover:scale-105 transition-transform duration-300 block"
+        />
+        <p class="font-medium text-neutral-500">
+          {{ achievement.name }}
+        </p>
+        <p class="text-neutral-100">{{ achievement.description }}</p>
+      </div>
+    </div>
+  </div>
+
+  <ng-container *ngIf="!errorMessage && (!user || !stats || !achievements)">
     <div class="text-center text-neutral-500 mt-8">
       <p class="text-lg">Loading profile...</p>
     </div>
