--- a/frontend/quiz/src/app/pages/profile/profile.component.html
+++ b/frontend/quiz/src/app/pages/profile/profile.component.html
@@ -70,7 +70,7 @@
     </div>
   </div>
 
-  <ng-container *ngIf="!errorMessage && (!user || !stats || !achievements)">
+  <ng-container *ngIf="!errorMessage && (!user || !stats)">
     <div class="text-center text-neutral-500 mt-8">
       <p class="text-lg">Loading profile...</p>
     </div>
