--- a/frontend/quiz/src/app/pages/profile/profile.component.html
+++ b/frontend/quiz/src/app/pages/profile/profile.component.html
@@ -51,7 +51,9 @@
     class="bg-neutral-800 p-6 rounded-lg shadow-lg border border-neutral-600 mt-6"
     *ngIf="achievements && achievements.length > 0"
   >
-    <h2 class="text-xl font-semibold text-neutral-100 mb-4">Achievements</h2>
+    <h2 class="text-xl font-semibold text-neutral-100 mb-4 text-center">
+      Achievements
+    </h2>
     <div class="grid grid-cols-3 place-items-center">
       <div
         *ngFor="let achievement of achievements"
