--- a/frontend/quiz/src/app/pages/login/login.component.html
+++ b/frontend/quiz/src/app/pages/login/login.component.html
@@ -26,7 +26,9 @@
       />
     </div>
 
-    <div *ngIf="errorMessage" class="error">{{ errorMessage }}</div>
+    @if(errorMessage){
+    <div class="error">{{ errorMessage }}</div>
+    }
 
     <button type="submit" class="btn btn-primary" [disabled]="form.invalid">
       Login
