--- a/frontend/quiz/src/app/pages/quiz/quiz.component.html
+++ b/frontend/quiz/src/app/pages/quiz/quiz.component.html
@@ -1,9 +1,8 @@
-<p *ngIf="isLoading" class="loading">Loading quiz data...</p>
+@if(isLoading){
+<p class="loading">Loading quiz data...</p>
+} @if(!isLoading && quiz){
 
-<div
-  *ngIf="!isLoading && quiz"
-  class="max-w-4xl mx-auto p-6 bg-neutral-800 rounded-lg shadow-l"
->
+<div class="max-w-4xl mx-auto p-6 bg-neutral-800 rounded-lg shadow-l">
   <button
     (click)="goBack()"
     class="mb-4 text-blue-500 hover:text-blue-700 font-semibold underline"
@@ -39,13 +38,16 @@
       <strong>Number of Questions:</strong> {{ quiz.questions.length }}
     </p>
 
+    @if(this.isLoggedIn()){
+
     <a
-      *ngIf="this.isLoggedIn()"
-      routerLink="/quizzes/{{quiz.id}}/solve"
+      routerLink="/quizzes/{{ quiz.id }}/solve"
       type="button"
       class="bg-green-500 text-white px-4 py-2 rounded-md hover:bg-green-600 block text-center"
     >
       Start quiz
     </a>
+    }
   </div>
 </div>
+}
