--- a/frontend/quiz/src/app/pages/profile/profile.component.html
+++ b/frontend/quiz/src/app/pages/profile/profile.component.html
@@ -1,13 +1,45 @@
 <div class="container mx-auto p-8 max-w-4xl">
   <h1 class="text-3xl font-extrabold text-center text-white mb-6">Profile</h1>
-
-  @if(errorMessage){
-
+  @if(user){
+  <div
+    class="bg-neutral-800 p-6 rounded-lg shadow-lg border border-neutral-600 gird items-center mb-6"
+  >
+    @if(profilePictureUrl){
+    <img
+      [src]="profilePictureUrl"
+      alt="Profile Picture"
+      class="w-32 h-32 rounded-full object-cover mx-auto"
+    />
+    }@else{
+    <form
+      [formGroup]="profileForm"
+      (ngSubmit)="uploadImage()"
+      class="flex flex-col gap-4"
+    >
+      <label for="profileImage">Upload Profile Image:</label>
+      <input
+        type="file"
+        id="profileImage"
+        (change)="onFileSelected($event)"
+        name="profileImage"
+        accept="image/*"
+        required
+      />
+      <button
+        type="submit"
+        [disabled]="profileForm.invalid"
+        class="bg-green-600 hover:bg-green-500 rounded-md p-2 cursor-pointer text-white disabled:bg-gray-500"
+      >
+        Upload
+      </button>
+    </form>
+    }
+  </div>
+  } @if(errorMessage){
   <div class="text-red-600 mb-6 text-center">
     {{ errorMessage }}
   </div>
   } @if(user && stats){
-
   <div class="grid gap-6 md:grid-cols-2">
     <div
       class="bg-neutral-800 p-6 rounded-lg shadow-lg border border-neutral-600"
